--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- navbar Sardor -->
 
-    <!-- navbar Sardor -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-    <!-- header Muhammadqodir  -->
+<body>
+  <!-- navbar Sardor -->
 
-    <!-- header  Muhammadqodir-->
+  <!-- navbar Sardor -->
 
-    <!-- Muhammadg'ziy card -->
+  <!-- header Muhammadqodir  -->
+  <div class="hearderbig">
+    <div class="headerdiv">
+      <p class="headerp1">header1</p>
+      <p class="headerp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, maxime.</p>
+      <button class="headerpb">more</button>
+    </div>
+    <div class="headerdiv">
+      <p class="headerp1">header2</p>
+      <p class="headerp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, maxime.</p>
+      <button class="headerpb">more</button>
+    </div>
+    <div class="headerdiv">
+      <p class="headerp1">header3</p>
+      <p class="headerp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, maxime.</p>
+      <button class="headerpb">more</button>
+    </div>
+    <div class="headerdiv">
+      <p class="headerp1">header4</p>
+      <p class="headerp2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, maxime.</p>
+      <button class="headerpb">more</button>
+    </div>
+  </div>
+  <!-- header  Muhammadqodir-->
 
-    <!-- Muhammadg'ziy card -->
+  <!-- Muhammadg'ziy card -->
 
-    <!-- Iqrorjon img card -->
+  <!-- Muhammadg'ziy card -->
 
-    <!-- Iqrorjon img card -->
+  <!-- Iqrorjon img card -->
 
-    <!-- Shahriyor footer -->
-  </body>
+  <!-- Iqrorjon img card -->
+
+  <!-- Shahriyor footer -->
+</body>
+
 </html>
