--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
   </head>
   <body>
     <!-- navbar Sardor -->
+    <div>
+      <div class="navbar">
+        <ul>
+          <li>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Blog</a>
+            <a href="#">Service</a>
+            <a href="#">Call center</a>
+          </li>
+        </ul>
+      </div>
+      <div class="foto">
+        <img class="fot" src="https://img.freepik.com/free-vector/night-ocean-landscape-full-moon-stars-shine_107791-7397.jpg?w=2000" alt="Italian Trulli">
+      </div>
+    </div>
 
     <!-- navbar Sardor -->
 
