--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
     <!-- Muhammadg'ziy card -->
 
     <!-- Iqrorjon img card -->
-    <div>
-      <img src="rasm.jpg" alt="" >
-      <h1>Kuz</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
-     </div>
-     <div>
-      <img src="rasm.jpg" alt="">
-      <h1>Kuz</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
-     </div>
-     <div>
-      <img src="rasm.jpg" alt="">
-      <h1>Kuz</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
-     </div>
-     <div>
-      <img src="rasm.jpg" alt="">
-      <h1>Kuz</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
-     </div>
-  </div>
+    <div  class="img_card">
+      <div class="img_zogo">
+        <img src="rasm.jpg" alt="" >
+        <h1>Kuz</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
+       </div>
+       <div>
+        <img src="rasm.jpg" alt="">
+        <h1>Kuz</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
+       </div>
+       <div>
+        <img src="rasm.jpg" alt="">
+        <h1>Kuz</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
+       </div>
+       <div>
+        <img src="rasm.jpg" alt="">
+        <h1>Kuz</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, libero!</p>
+       </div>
+    </div>
     <!-- Iqrorjon img card -->
 
     <!-- Shahriyor footer -->
