--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- navbar Sardor -->
@@ -24,5 +25,21 @@
     <!-- Iqrorjon img card -->
 
     <!-- Shahriyor footer -->
+    <div class="shahriyor1">
+      <footer><br>
+        <h4 class="shahriyorh4">
+          Tel: +998991234567
+        </h4><br><br>
+        <h4 class="shahriyorh4">
+          Email: example@gmail.com
+        </h4><br><br>
+        <h4 class="shahriyorh4">
+          Adress: Rishtan Ferghana Uzbekistan
+        </h4>
+      </footer>
+      <div>
+        <img class="shahriyor_img" src="./img.png" alt="maps">
+      </div>
+    </div>
   </body>
 </html>
